30/8/2019 - Bigeroni Lateroni Fixeroni Causeroni I Careoni Too Much...oni. By A-A-You know who.

--- a/css/studyStylesheet.css
+++ b/css/studyStylesheet.css
@@ -68,6 +68,38 @@ a:hover{
     font-size: 16px;
 }
 
+#navbarSearchContainer{
+    background-color:  white;
+    border-radius: 30px;
+    border:2px solid;
+    border-color:hsla(166, 51%, 78%, 1);
+    position:relative;
+    z-index:5;
+    height:35px;
+    width:275px;
+}
+
+#navbarSearch{
+    color: black;
+    border: 0;
+    outline: 0;
+    background: none;
+    caret-color:teal;
+    border-radius: 15px;
+    width:85%;
+}
+
+#navbarSearchIcon{
+    height: 31px;
+    width: 31px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: white;
+}
+
 #loginSocialBox button{
     font-size:1.3rem;
     font-family: 'Nunito', sans-serif;
@@ -563,10 +595,37 @@ div > .footerMiscInfo{
     padding:0px;
 }
 */
-.groupTileClose{
-    top:5px !important;
-    right:20px !important;
+
+.groupTileModal{
+    padding:0px !important;
 }
+
+.groupModalClose{
+    top:0px !important;
+    right:15px !important;
+}
+
+.groupModalTitle{
+    color:Black;
+    font-weight: 700;
+}
+
+.groupModalContent{
+    margin:auto;
+    max-width: 750px;
+}
+
+.groupModalClose{
+    position:absolute;
+    right:15px !important;
+    top:0px !important;
+    z-index:999;
+    font-size:2.7rem;
+    font-weight: normal;
+    color:green;
+    opacity:1;
+}
+
 
 #loginClose{
     color:green;
